fix(ui): BundleChunkModules - tweak tooltip spacing

--- a/packages/ui/src/components/bundle-chunk-modules/bundle-chunk-modules.module.css
+++ b/packages/ui/src/components/bundle-chunk-modules/bundle-chunk-modules.module.css
@@ -13,6 +13,11 @@
   text-align: left;
 }
 
+.nameTooltipTitle {
+  margin: 0;
+  color: var(--color-gray-ultra-dark);
+}
+
 .nameTooltipText {
   display: block;
   width: 100%;
@@ -20,6 +25,6 @@
   min-width: 280px;
 }
 
-.nameTooltipText + .nameTooltipText {
+.nameTooltipItem + .nameTooltipItem {
   margin-top: var(--space-small);
 }
